--- a/style.css
+++ b/style.css
@@ -185,3 +185,14 @@ body * {
   opacity: 70%;
   margin-top: 9.6px;
 }
+
+@media (max-width: 670px) {
+  #app {
+    display: flex;
+    flex-direction: column;
+    max-width: 270px;
+    margin: auto;
+    height: auto;
+    padding-block: 60px;
+  }
+}
